# rqagrodev

./: .gitignore  Dockerfile  connect.sh  deploy.sh  docker-compose.yml  install_and_run.sh  pyproject.toml
.github/workflows/: deploy.yaml
app/: main.py
app/interfaces/: airtable.py  llm.py  optimly.py
app/lib/graphs/agent_with_tools/: graph.py  state.py
app/lib/graphs/agent_with_tools/nodes/: actions.py  tool_call.py
app/lib/graphs/agent_with_tools/tools/: fitosanitarios.py  osigris.py  osigris2.py  record.py  utils.py
app/lib/whatsapp/: message.py  utils.py
app/models/: fitosanitario.py  record.py  record2.py  user.py
app/prompts/: __init__.py
app/router/: llm.py  whatsapp.py
app/utils/: error_handler.py  logging.py  pydantic_formatters.py
docs/: deploy.md
tests/: test_database.py
